# caldo

./: Cargo.toml  README.txt  TODO.txt  instructions.rst  life_and_death.rst  metabolism.rst  rust_notes.txt
doc/: ideas.txt  instructions.rst  life_and_death.rst  more_thoughts.txt  mutation.rst  sensing.rst
src/: cell.rs  gene.rs  instruction.rs  instruction_lookup.rs  lib.rs  lookup.rs  main.rs  port.rs  processor.rs  reaction.rs  stack.rs  triple.rs  triplet.rs  world.rs
tests/: world_test.rs
