[package]
name = "caldo"
version = "0.1.0"
authors = ["Martijn Faassen <faassen@startifact.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "*"
enum-map-derive = "*"
kdtree = "0.5.1"
rand = "0.7.2"
rand_pcg = "0.2.0"
typed-generational-arena = "0.2.5"